# truckscenes-devkit

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  requirements.txt  setup.cfg
docs/: installation.md  schema_truckscenes.md
python-sdk/truckscenes/: truckscenes.py
python-sdk/truckscenes/eval/common/: config.py  loaders.py  render.py  utils.py
python-sdk/truckscenes/eval/detection/: config.py  evaluate.py  render.py  utils.py
python-sdk/truckscenes/utils/: color_map.py  colormap.py  data_classes.py  splits.py  visualization_utils.py
setup/requirements/: requirements_base.txt  requirements_visu.txt
src/truckscenes/: __init__.py  truckscenes.py
src/truckscenes/eval/common/: constants.py  data_classes.py  render.py  utils.py
src/truckscenes/eval/detection/: README.md  algo.py  config.py  constants.py  data_classes.py  evaluate.py  render.py  utils.py
src/truckscenes/eval/detection/configs/: detection_cvpr_2024.json
src/truckscenes/utils/: data_classes.py  geometry_utils.py  splits.py  visualization_utils.py
