[metadata]
name = truckscenes
version = 0.1.0
author = 'Felix Fent, Fabian Kuttenreich, Florian Ruch, Farija Rizwin'
author_email = truckscenes@man.eu
description = MAN TruckScenes Development Kit
keywords = MAN, TruckScenes, dataset, devkit
license = Apache-2.0
license_files = LICENSE
platforms = linux, windows
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = 
    truckscenes
install_requires = 
	cachetools
    descartes
    fire
    matplotlib<=3.5.2
    numpy
    open3d
    opencv-python
    Pillow>6.2.1
    pyquaternion>=0.9.5
    scikit-learn
    scipy
    Shapely<=1.8.5
    tqdm
    pypcd @ https://github.com/DanielPollithy/pypcd/archive/master.zip
python_requires = 
    >=3.6
package_dir = 
    =python-sdk
zip_safe = no

[flake8]
max-line-length = 99
