[metadata]
name = truckscenes-devkit
version = 0.0.2
author = Felix Fent, Fabian Kuttenreich, Florian Ruch, Farija Rizwin
author_email = truckscenes@man.eu
url = https://github.com/TUMFTM/truckscenes-devkit
description = Official development kit of the MAN TruckScenes dataset (www.man.eu/truckscenes).
long_description = file: README.md
long_description_content_type = text/markdown
keywords = MAN, TruckScenes, dataset, devkit, perception
license = Apache-2.0
license_files = LICENSE
platforms = linux, windows
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find_namespace:
package_dir = 
    = src
include_package_data = True
install_requires = 
    numpy
    pyquaternion>=0.9.5
    tqdm
    pypcd4
python_requires = 
    >=3.6
zip_safe = False

[options.packages.find]
where = src
exclude =
    tutorials

[options.package_data]
truckscenes.eval.* =
    *.json

[options.extras_require]
all =
    matplotlib
    jupyter
    open3d
    opencv-python
    Pillow>6.2.1
visu =
    matplotlib
    open3d
    opencv-python
    Pillow>6.2.1

[flake8]
max-line-length = 99
